--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /* General */
+
 .txtcenter {
     text-align: center;
 }
@@ -40,7 +41,9 @@
     border-top: 2px solid #000000;
 }
 
+
 /* Open sans font */
+
 .m-title {
     font-family: "Open Sans";
     font-weight: 400;
@@ -89,7 +92,9 @@
     line-height: 26.4px;
 }
 
+
 /* Navbar */
+
 .navbar-light .navbar-nav .active>.nav-link,
 .navbar-light .navbar-nav .nav-link.active,
 .navbar-light .navbar-nav .nav-link.show,
@@ -98,7 +103,9 @@
     text-decoration: underline;
 }
 
+
 /* Logos */
+
 .img-h {
     height: 70px;
 }
@@ -108,7 +115,9 @@
     margin-left: 10px;
 }
 
+
 /* Footer */
+
 .w-divider-line {
     width: 100%;
     height: 0px;
@@ -116,6 +125,19 @@
     border-top: 2px solid #ffffff;
 }
 
-.hover-footer: hover {
+.hover-footer hover {
     color: #f8cf5f;
+}
+
+.dev-name {
+    font-size: 18px;
+    font-weight: bold;
+    margin: 0px 0 0px 0;
+    color: #5e5e5e;
+}
+
+.dev-role {
+    font-size: 16px;
+    margin: 0px 0 0px 0;
+    color: #5e5e5e;
 }
